# dusseldorf

./: .dockerignore  .gitignore  README.md  SUPPORT.md
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/policies/: branch-policies.yml
.github/workflows/: acr-publish.yml  cli-binaries.yml  cli-release.yml  ui.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  owners.txt  requirements.txt
api/install/: INSTALL.md  init_database.py
api/src/api/: config.py  dependencies.py  main.py  test_main.py
cli/: .gitignore  ENTRAID_SETUP.md  README.md  SPEC.md  pyproject.toml  requirements.txt
cli/src/dssldrf_cli/: api_client.py  config_store.py  main.py  rule_builder.py  rule_service.py
cli/tests/: test_req_command.py  test_rule_command.py
docs/: install.md  local.md  using.md
docs/azure/: create_dusseldorf_resources.sh  init_container.yaml  init_database.py  readme.md
docs/azure/ARM/: dusseldorf-parameter.json  dusseldorf-template.json
docs/helm/: Chart.yaml  python_init_script.yaml  values.yaml
docs/local/: Readme.md  docker-compose.yml  readme.md
docs/setup/: auth.md  tls.md
dusseldorf/: .dockerignore  README.md  _mock_api.py  api_Dockerfile  compose.yml  dns-listener_Dockerfile  docker-compose.yml  generate_devenv.sh  http-listener_Dockerfile  mcp-server_Dockerfile
dusseldorf/api/: OBSERVABILITY.md  README.md
dusseldorf/listener.dns/: README.md
dusseldorf/listener.http/: DockerfileHTTPS
dusseldorf/mcp-server/: README.md  pyproject.toml
dusseldorf/ui/: .gitignore  README.md  babel.config.json  eslint.config.mjs  jest.config.cjs  package-lock.json  package.json  tsconfig.json
dusseldorf/zentralbibliothek/: README.md  build.sh  requirements.txt  setup.py
listener.dns/: Dockerfile  README.md  setenv.sh
listener.dns/src/: config.py  dnsresolver.py  dnsruleengine.py  requirements.txt  run.py  test_dnsresolver.py
listener.http/: Dockerfile  DockerfileHTTPS  README.md  setenv.sh
listener.http/src/: httplistener.py  httprules.py  requirements.txt  run.py  test_httpreq.py
mcp-server/: README.md  pyproject.toml
mcp-server/src/dusseldorf_mcp/: client.py  server.py
src/api/: README.md
src/listener.dns/: Dockerfile
src/listener.http/: Dockerfile  README.md
src/ui/: eslint.config.mjs  package-lock.json  package.json
src/zentralbibliothek/: README.md  build.sh  pyproject.toml  requirements.txt
src/zentralbibliothek/src/zentralbibliothek/: dbclient3.py  logging.py  ruleengine.py  utils.py
src/zentralbibliothek/src/zentralbibliothek/models/: rule.py
src/zentralbibliothek/tests/: test_dbclient3.py  test_modules.py
src/zentralbibliothek/tests/models/: test_networkrequest.py  test_networkresponse.py  test_predicate.py  test_result.py
zentralbibliothek/: README.md  build.sh  pyproject.toml  requirements.txt  setup.py
zentralbibliothek/tests/: sample.config  test_modules.py
(+304 files in other folders)
