# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

# Project duSSeldoRF CLI

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dssldrf-cli"
version = "0.3.1"
description = "Minimal cross-platform command line client tool for Dusseldorf"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12,<1.0",
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
]

[project.scripts]
dssldrf = "dssldrf_cli.main:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
